[package]
name = "quickparser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "quick"
path = "src/bin/quick.rs"

[[bin]]
name = "quick2"
path = "src/bin/quick2.rs"

[dependencies]
quick-xml = { version = "0.28.2", features = ["serde-types", "serialize"]}
serde = { version = "1.0.124", features = ["derive"] }
data-encoding = "2.3.3"
ring = "0.16.20"